# shop

./: README.md
ruoyi-vue-pro/: MALL_BASE_LOCAL.md  README.md  pom.xml
shop-admin/: .env  .env.local  .env.prod  .env.test  README.md  index.html
shop-admin/src/locales/: zh-CN.ts
shop-ai-service/: .env.example  .gitignore  Dockerfile  LICENSE-THIRD-PARTY.md  README.md  docker-compose.yml  pyproject.toml
shop-ai-service/app/: __init__.py  main.py  settings.py
shop-ai-service/app/api/: events.py  internal.py  schemas.py
shop-ai-service/app/memory/: __init__.py  factory.py  sqlite.py
shop-ai-service/app/prod/: __init__.py  audit.py  rate_limit.py  resilience.py  safety.py
shop-ai-service/app/providers/: __init__.py  base.py  openai_compatible.py
shop-ai-service/app/rag/: __init__.py  store.py
shop-ai-service/app/tools/: __init__.py  shop_server.py
shop-ai-service/knowledge/: aftersale_policy.md  faq.md  mall_rules.md
shop-ai-service/tests/: test_health.py  test_memory.py  test_prod.py  test_rag.py  test_redis_memory.py  test_shop_server_tools.py
shop-mobile/: .env  .gitignore  README.md  manifest.json  package.json  pages.json  vite.config.js
shop-mobile/scripts/: sync-mp-weixin-static.ps1
shop-server/: MALL_BASE_LOCAL.md  README.md  pom.xml
shop-server/scripts/: generate-mall-schema.js
shop-server/yudao-module-ai/: pom.xml
shop-server/yudao-server/: pom.xml
yudao-ui-admin-vue3/: .env  .env.dev  .env.stage  README.md  package.json  pnpm-lock.yaml  vite.config.ts
yudao-ui-mall-uniapp/: .env  README.md  package.json  pnpm-lock.yaml
(+135 files in other folders)
