[project]
name = "shop-ai-service"
version = "0.1.0"
description = "AI orchestration service for the shop workspace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic-settings>=2.7,<3.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.68,<2.0",
]
rag = [
    "qdrant-client>=1.13,<2.0",
]
memory = [
    "mem0ai>=0.1.29,<1.0",
]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.28,<1.0",
    "ruff>=0.11,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

